# XmlReader

./: .gitignore  README.md
XmlReader_v1/: README.md
XmlReader_v1/xml_parse_doc/: mainwindow.cpp  mainwindow.h  mainwindow.ui  xml_parse_doc.pro
XmlReader_v3/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  README.md  main.cpp  mydocument.xml
